tests/tokenizer/string_newline.expected
<string>:1:1: error: unterminated string literal (newline in string)
"string with
^^^^^^^^^^^^
